k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels: 
      component: web
  template:
    metadata:
      #identifies pods to manage
      labels: 
        component: web
    spec:
      containers:
        - name: client
          image: gcr.io/williamscj-gke-demos/multi-client:v5
          ports:
            #port that maps to client image
            - containerPort: 3000
