k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  #pod template
  template:
    #define labels
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: gcr.io/williamscj-gke-demos/multi-server:v1
          ports:
            - containerPort: 5000
