k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
      #how other other pods access our pod
    - port: 3000
      #port on target pods (multi-client pod) service talks 
      targetPort: 3000
